Update swagger and controller for namespaces Add put and delete methods Update error handler to accept objects
